# neo-neofetch

./: .gitignore  CMakeLists.txt  README.md  compile.sh
include/: fetch.h  neofetch.h  parse.h  struct.h
src/: CMakeLists.txt  main.c
src/config/: CMakeLists.txt  is_image_supported.c  run_config.c
src/fetch/: CMakeLists.txt  cpu.c  hostname.c  memory.c  osname.c  resolution.c  shell.c  term.c  uptime.c
src/parse/: CMakeLists.txt  clear_varialble.c  get_hidden_file.c  get_variable.c  get_variable_string.c
